# snap2rednote

./: .gitignore  AGENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  rednote-screenshot-cropper-codex-spec.md  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  main.tsx
src/components/: CropModeSelector.tsx  ExportPanel.tsx  ImportPanel.tsx  PreviewCanvas.tsx  RatioSelector.tsx  StylePanel.tsx  ThumbnailStrip.tsx
src/lib/: constants.ts  cropEngine.test.ts  cropEngine.ts  exportEngine.ts  imageLoader.ts  renderEngine.ts  store.ts
src/styles/: global.css
src/types/: index.ts
