[package]
name = "rednote-screenshot-cropper"
version = "0.1.0"
description = "A local screenshot cropper for Rednote-ready vertical images."
authors = ["Rednote Screenshot Cropper"]
edition = "2021"

[lib]
name = "rednote_screenshot_cropper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
