[package]
name = "rednote-screenshot-cropper"
version = "0.1.0"
description = "A local screenshot cropper for Rednote-ready vertical images."
authors = ["Rednote Screenshot Cropper"]
edition = "2021"

[lib]
name = "rednote_screenshot_cropper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
